@@ -1,5 +1,9 @@
 2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	* src/sfnt/ttpost.c (load_format_{20,25}): Tweak allocaton macros.
+
+2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	* src/sfnt/pngshim.c (Load_SBit_Png): Tweak allocaton macro.
 
 2021-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
